--- a/opmaak.css
+++ b/opmaak.css
@@ -1,8 +1,9 @@
-body {height:5000px;
+body {
+  height:5000px;
     background-color: rgb(237, 135, 11);
   }
   ul {
     list-style-type: none;
-    margin: 0;
+    margin: 5;
     padding: 0;
   }
