--- a/opmaak.css
+++ b/opmaak.css
@@ -6,9 +6,13 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 60px;
+  }
+  li {
+    float: left;
   }
   
-  li a {
+  a {
     display: block;
+    padding: 8px;
+    background-color: #dddddd;
   }
