--- a/opmaak.css
+++ b/opmaak.css
@@ -48,7 +48,7 @@ style
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {background-color: #ea902f}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
