--- a/opmaak.css
+++ b/opmaak.css
@@ -16,10 +16,9 @@ style
 /* Style The Dropdown Button */
 .dropbtn {
   background-color: #4CAF50;
-  color: white;
   padding: 16px;
   font-size: 16px;
-  border: none;
+  border:black
   cursor: pointer;
 }
 
@@ -33,7 +32,6 @@ style
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
