--- a/opmaak.css
+++ b/opmaak.css
@@ -16,9 +16,10 @@ style
 /* Style The Dropdown Button */
 .dropbtn {
   background-color: #4CAF50;
+  color: white;
   padding: 16px;
   font-size: 16px;
-  border:black
+  border: none;
   cursor: pointer;
 }
 
@@ -32,6 +33,7 @@ style
 .dropdown-content {
   display: none;
   position: absolute;
+  background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -46,7 +48,7 @@ style
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ea902f}
+.dropdown-content a:hover {background-color: #f1f1f1}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -58,3 +60,9 @@ style
   background-color: #3e8e41;
 }
 
+div class="dropdown"
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Next page</a>
+  </div>
+</div>
