--- a/opmaak.css
+++ b/opmaak.css
@@ -32,7 +32,7 @@ style
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
-  position: right;
+  position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
