--- a/opmaak.css
+++ b/opmaak.css
@@ -16,7 +16,7 @@ style
 /* Style The Dropdown Button */
 .dropbtn {
   background-color: #4CAF50;
-  color: white;
+  color: rgb(237, 135, 11);
   padding: 16px;
   font-size: 16px;
   border: none;
