--- a/opmaak.css
+++ b/opmaak.css
@@ -33,7 +33,7 @@ style
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: rgb(237, 135, 11);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
