--- a/opmaak.css
+++ b/opmaak.css
@@ -58,3 +58,10 @@ style
 .dropdown:hover .dropbtn {
   background-color: #fd0b0b;
 }
+.shadowbox {
+  width: 15em;
+  border: 1px solid #333;
+  box-shadow: 8px 8px 5px #444;
+  padding: 8px 12px;
+  background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
+}
