--- a/opmaak.css
+++ b/opmaak.css
@@ -63,5 +63,6 @@ style
   border: 1px solid #fd0b0b;
   box-shadow: 8px 8px 5px #444;
   padding: 8px 12px;
+  align: center
   background-image: linear-gradient(180deg, #e71313, #ff6f00 40%, #d31155);
 }
