--- a/opmaak.css
+++ b/opmaak.css
@@ -65,5 +65,6 @@ style
   padding: 8px 12px;
   align-items: center;
   justify-content: center;
+  position:absolute
   background-image: linear-gradient(180deg, #e71313, #ff6f00 40%, #d31155);
 }
