--- a/opmaak.css
+++ b/opmaak.css
@@ -96,3 +96,11 @@ ul {
   li a:hover {
     background-color: #000000;
 }
+.roodtekst1{
+  width: 15em;
+  border: 1px solid #fd0b0b;
+  box-shadow: 8px 8px 5px #444;
+  padding: 8px 12px;
+  position:relative; top:0px; left: 540px; margin-left:0px; margin-right:0px;
+  background-image: linear-gradient(180deg, #e71313, #ff6f00 40%, #d31155);
+}
