--- a/opmaak.css
+++ b/opmaak.css
@@ -102,5 +102,5 @@ ul {
   box-shadow: 8px 8px 5px #444;
   padding: 8px 18px;
   position:relative; top:20px; left: 500px; margin-left:0px; margin-right:0px;
-  background-image: linear-gradient(180deg, #e71313, #ff6f00 40%, #d31155);
+  background-image: linear-gradient(180deg, #e71313, #ff6f00 40%, #f20000);
 }
