--- a/opmaak.css
+++ b/opmaak.css
@@ -112,3 +112,6 @@ ul {
   position:relative; top:30px; left: 500px; margin-left:0px; margin-right:0px;
   background-image: linear-gradient(180deg, #e71313, #ff6f00 40%, #f20000);
 }
+.binair {
+  float: center;
+}
