--- a/opmaak.css
+++ b/opmaak.css
@@ -115,3 +115,11 @@ ul {
 .binair {
   float: center;
 }
+.school{
+
+  display: inline-block;
+  float: left;
+  border-color: #e71313;
+  border-radius: 10px;
+  border: solid #ff6f00;
+}
