--- a/opmaak.css
+++ b/opmaak.css
@@ -124,11 +124,11 @@ ul {
   border: solid #ff6f00;
 }
 
-.sport{
+.werk{
 
   display: inline-block;
   float: left;
-  border-color: #e71313;
+  border-color: #c27e1f;
   border-radius: 10px;
-  border: solid #ff0000;
+  border: solid #c27e1f;
 }
