--- a/opmaak.css
+++ b/opmaak.css
@@ -11,6 +11,51 @@ body {
     display: block;
     padding: 8px;
   }
+style
+/* Style The Dropdown Button */
+.dropbtn {
+  background-color: rgb(237, 135, 11);
+  color: rgb(237, 135, 11);
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(237, 135, 11);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #fd0b0b;
+}
+.kleurrood {
   width: 15em;
   border: 1px solid #fd0b0b;
   box-shadow: 8px 8px 5px #444;
