--- a/opmaak.css
+++ b/opmaak.css
@@ -46,6 +46,9 @@ style
   display: block;
 }
 
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: rgb(237, 135, 11)}
+
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
@@ -87,7 +90,12 @@ ul {
     text-align: center;
     padding: 16px 19px;
     text-decoration: none;
-
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  li a:hover {
+    background-color: #000000;
+}
 .roodtekst1{
   width: 20em;
   border: 1px solid #fd0b0b;
