--- a/opmaak.css
+++ b/opmaak.css
@@ -92,3 +92,10 @@ ul {
   border-radius: 10px;
   border: solid #c27e1f;
 }
+.PS4{
+
+  float: left;
+  border-color: rgb(0, 0, 255);
+  border-radius: 10px;
+  border: solid #c27e1f;
+}
