--- a/opmaak.css
+++ b/opmaak.css
@@ -97,5 +97,5 @@ ul {
   float: left;
   border-color: rgb(0, 0, 255);
   border-radius: 10px;
-  border: solid #c27e1f;
+  border: solid rgb(0, 0, 255);
 }
