--- a/opmaak.css
+++ b/opmaak.css
@@ -120,3 +120,17 @@ ul {
   border-radius: 10px;
   border: solid rgb(0, 128, 0);
 }
+.Tim{
+
+  float: left;
+  border-color: rgb(0, 238, 255);
+  border-radius: 10px;
+  border: solid rgb(0, 238, 255);
+}
+.Thom{
+
+  float: left;
+  border-color: white;
+  border-radius: 10px;
+  border: solid rgb(255, 255, 255);
+}
