--- a/opmaak.css
+++ b/opmaak.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 body {
+  font-family: sans-serif;
   height:1000px;
     background-color: rgb(0, 0, 0);
   ul {
