--- a/opmaak.css
+++ b/opmaak.css
@@ -170,7 +170,7 @@ float: left;
   /*De code hieronder is voor de border om de tekst*/
     border-inline: 100%;
   float: left;
-    border-color: white;
+    border-color: red;
     border-radius: 10px;
-    border: solid rgb(255, 255, 255);
+    border: solid rgb(255, 0, 0);
   }
