--- a/opmaak.css
+++ b/opmaak.css
@@ -174,3 +174,11 @@ float: left;
     border-radius: 10px;
     border: solid rgb(255, 0, 0);
   }
+  .compressie{
+    /*De code hieronder is voor de border om de tekst*/
+      border-inline: 100%;
+    float: left;
+      border-color: orange;
+      border-radius: 10px;
+      border: solid rgb(255, 165, 0);
+    }
