--- a/opmaak.css
+++ b/opmaak.css
@@ -192,7 +192,7 @@ float: left;
       }
     .footer{
     /*De code hieronder is voor de footer*/
-    border-inline: 100%;
+    border-radius: 50%;
     text-align: center;
     border-color: orange;  
     border-radius: 10px;
